13-kuber-3/manifests/pod_multy_t.yml
apiVersion: v1
kind: Pod
metadata:
  name: network-multitool
  labels:
    app: network-multitool
spec:
  # selector:
  #   matchLabels:
  #     app: network-multitool
  # template:
  #   metadata:
  #     labels:
  #       app: network-multitool
  #   spec:
      # hostNetwork: true
      # tolerations:
      # - operator: Exists
      #   effect: NoSchedule
  containers:
  - name: network-multitool
    image: wbitt/network-multitool
    ports:
    - containerPort: 1180
      name: http-port
    - containerPort: 11443
      name: https-port
    resources:
      requests:
        cpu: "1m"
        memory: "20Mi"
      limits:
        cpu: "10m"
        memory: "20Mi"
    # securityContext:
    #   runAsUser: 0
    #   capabilities:
    #     add: ["NET_ADMIN"]
